Agregué primerps cambios al html y css

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,15 @@
     <meta charset="utf-8">
     <title>Caesar Cipher</title>
     <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Anton|Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Merienda|Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root">
-      <h1>Hola mundo!</h1>
+      <h1>LA LEY<br>
+        EL ORDEN</h1>
+      <h2>Organización de periodistas y reporteros mexicanos</h2>
+
     </div>
     <script src="cipher.js"></script>
     <script src="index.js"></script>
