--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,14 @@
     <title>Caesar Cipher</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css?family=Anton|Roboto&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Anton|Merienda|Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Martel|Merienda|Roboto|Russo+One&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root">
       <h1>LA LEY<br>
         EL ORDEN</h1>
       <h2>Organización de periodistas y reporteros mexicanos</h2>
-
+    <input id= "input-name" type="text" placeholder="Ingresa tu código">
     </div>
     <script src="cipher.js"></script>
     <script src="index.js"></script>
