Hice botones de cifrar, descifrar en el html

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
         EL ORDEN</h1>
 
     <input id= "input-name" type="text" placeholder="Ingresa tu código">
+    <button id= "button-cifrar">Cifrar</button>
+    <button id= "button-descifrar">Descifrar</button>
+
     </div>
     <script src="cipher.js"></script>
     <script src="index.js"></script>
