--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       <h1>LA LEY<br>
         EL ORDEN</h1>
 
-    <input id= "input-name" type="text" placeholder="Ingresa tu código">
+    <input id= "input-name" type="text" placeholder="Ingresa tu mensaje">
     <button id= "button-cifrar">Cifrar</button>
     <button id= "button-descifrar">Descifrar</button>
 
