Cambié html, agregué ids a botones e inputs; puse estilos en css; cambié js

--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,10 @@
 
   <section id="second-section" class="appear">
 
-    <button type="button" name="button-code">CIFRAR</button>
-    <button type="button" name="button-decode">DESCIFRAR</button>
-    <input type="text" name="input-code" value="">
-    <input type="text" name="input-decode" value="">
+    <button id="button-code">CIFRAR</button>
+    <input id="input-code" type="text">
+    <button id="button-decode">DESCIFRAR</button>
+    <input id="input-decode" type="text">
 
   </section>
 
