Subiendo últimos cambios en style.css e index.html

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
     <div class="seccion-1-diseno">
       <section id="primera-seccion" class="appear">
-        <h2>organización de periodistas y reporteros mexicanos</h2>
+        <h2>organización de <span style="color:lightseagreen">periodistas</span> y <span style="color:lightseagreen">reporteros</span> mexicanos</h2>
         <h1>LA LEY Y EL ORDEN</h1>
         <p>comparte de manera segura tu ubicación con tus colegas</p>
         <button id="boton-acceso">INGRESAR</button>
